==> PedroMP98/GestureDomoticsTFG/Programming/Libraries/APDS9960-STM32/APDS9960.cpp <==
#include "APDS9960.h"

int APDS9960::readGesture()
{
	uint8_t fifo_level = 0;
	uint8_t bytes_read = 0;
	uint8_t fifo_data[128];
	uint8_t gstatus;

	int motion;
	int i;

	/* Make sure that power and gesture is on and data is valid */
	if( !isGestureAvailable() || !(getMode() & 0b01000001) )
	{
		return DIR_NONE;
	}

	/* Keep looping as long as gesture data is valid */
	while(1)
	{
		/* Wait some time to collect next batch of FIFO data */
		HAL_Delay(FIFO_PAUSE_TIME);

		/* Get the contents of the STATUS register. Is data still valid? */
		if( !APDS_9960_Read(APDS9960_GSTATUS, gstatus) )
		{
			return ERROR;
		}

		/* If we have valid data, read in FIFO */
		if( (gstatus & APDS9960_GVALID) == APDS9960_GVALID )
		{

			/* Read the current FIFO level */
			if( !APDS_9960_Read(APDS9960_GFLVL, fifo_level) )
			{
				return ERROR;
			}

#if DEBUG
			sprintf((char*)msg,"\n FIFO Level: %d ",fifo_level);
			HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);
#endif

			/* If there's stuff in the FIFO, read it into our data block */
			if( fifo_level > 0)
			{
				bytes_read = APDS_9960_Read_Block(  APDS9960_GFIFO_U,(uint8_t*)fifo_data,(fifo_level * 4) );
				if( bytes_read == -1 )
				{
					return ERROR;
				}
			}
#if DEBUG

			sprintf((char*)msg,"\n FIFO Dump: ");
			HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);
			for ( i = 0; i < bytes_read; i++ )
			{
				sprintf((char*)msg," %d ",fifo_data[i]);
				HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);
			}
#endif

			/* If at least 1 set of data, sort the data into U/D/L/R */
			if( bytes_read >= 4 )
			{
				for( i = 0; i < bytes_read; i += 4 )
				{
					gesture_data_.u_data[gesture_data_.index] = \
							fifo_data[i + 0];
					gesture_data_.d_data[gesture_data_.index] = \
							fifo_data[i + 1];
					gesture_data_.l_data[gesture_data_.index] = \
							fifo_data[i + 2];
					gesture_data_.r_data[gesture_data_.index] = \
							fifo_data[i + 3];
					gesture_data_.index++;
					gesture_data_.total_gestures++;
				}


#if DEBUG

				sprintf((char*)msg,"\n Up Data: ");
				HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);
				for ( i = 0; i < gesture_data_.total_gestures; i++ )
				{
					sprintf((char*)msg," %d ",gesture_data_.u_data[i]);
					HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);
				}
#endif

				/* Filter and process gesture data. Decode near/far state */
				if( processGestureData() )
				{
					if( decodeGesture() )
					{
						//***TODO: U-Turn Gestures
					}
				}

/* Reset data */
gesture_data_.index = 0;
gesture_data_.total_gestures = 0;
			}
		}
		else
		{

			/* Determine best guessed gesture and clean up */
			HAL_Delay(FIFO_PAUSE_TIME);
			decodeGesture();
			motion = gesture_motion_;
#if DEBUG
			sprintf((char*)msg,"\n END:");
			HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);
			sprintf((char*)msg," %d: ",gesture_motion_);
			HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);
#endif
			resetGestureParameters();
			return motion;
		}
	}
}

bool APDS9960::processGestureData()
{
	uint8_t u_first = 0;
	uint8_t d_first = 0;
	uint8_t l_first = 0;
	uint8_t r_first = 0;
	uint8_t u_last = 0;
	uint8_t d_last = 0;
	uint8_t l_last = 0;
	uint8_t r_last = 0;
	int ud_ratio_first;
	int lr_ratio_first;
	int ud_ratio_last;
	int lr_ratio_last;
	int ud_delta;
	int lr_delta;
	int i;

	/* If we have less than 4 total gestures, that's not enough */
	if( gesture_data_.total_gestures <= 4 )
	{
		return false;
	}

	/* Check to make sure our data isn't out of bounds */
	if( (gesture_data_.total_gestures <= 32) && \
			(gesture_data_.total_gestures > 0) )
	{

		/* Find the first value in U/D/L/R above the threshold */
		for( i = 0; i < gesture_data_.total_gestures; i++ )
		{
			if( (gesture_data_.u_data[i] > GESTURE_THRESHOLD_OUT) &&
		     	(gesture_data_.d_data[i] > GESTURE_THRESHOLD_OUT) &&
				(gesture_data_.l_data[i] > GESTURE_THRESHOLD_OUT) &&
				(gesture_data_.r_data[i] > GESTURE_THRESHOLD_OUT) )
			{

				u_first = gesture_data_.u_data[i];
				d_first = gesture_data_.d_data[i];
				l_first = gesture_data_.l_data[i];
				r_first = gesture_data_.r_data[i];
				break;
			}
		}

		/* If one of the _first values is 0, then there is no good data */
		if( (u_first == 0) || (d_first == 0) || \
				(l_first == 0) || (r_first == 0) )
		{

			return false;
		}
		/* Find the last value in U/D/L/R above the threshold */
		for( i = gesture_data_.total_gestures - 1; i >= 0; i-- )
		{

#if DEBUG
			sprintf((char*)msg,"\n Finding last: ");
			HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);

			sprintf((char*)msg," U: %d ",gesture_data_.u_data[i]);
			HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);

			sprintf((char*)msg," D: %d ",gesture_data_.d_data[i]);
			HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);

			sprintf((char*)msg," L: %d ",gesture_data_.l_data[i]);
			HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);

			sprintf((char*)msg," R: %d ",gesture_data_.r_data[i]);
			HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);

#endif
			if( (gesture_data_.u_data[i] > GESTURE_THRESHOLD_OUT) &&
					(gesture_data_.d_data[i] > GESTURE_THRESHOLD_OUT) &&
					(gesture_data_.l_data[i] > GESTURE_THRESHOLD_OUT) &&
					(gesture_data_.r_data[i] > GESTURE_THRESHOLD_OUT) )
			{

				u_last = gesture_data_.u_data[i];
				d_last = gesture_data_.d_data[i];
				l_last = gesture_data_.l_data[i];
				r_last = gesture_data_.r_data[i];
				break;
			}
		}
	}

	/* Calculate the first vs. last ratio of up/down and left/right */
	ud_ratio_first = ((u_first - d_first) * 100) / (u_first + d_first);
	lr_ratio_first = ((l_first - r_first) * 100) / (l_first + r_first);
	ud_ratio_last = ((u_last - d_last) * 100) / (u_last + d_last);
	lr_ratio_last = ((l_last - r_last) * 100) / (l_last + r_last);

#if DEBUG
	sprintf((char*)msg,"\n Last Values: ");
	HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);
	sprintf((char*)msg," U: %d   D: %d   L: %d   R: %d",u_last,d_last,l_last,r_last);
	HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);

	sprintf((char*)msg,"\n Ratios: ");
	HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);
	sprintf((char*)msg," UD Fi: %d   UD La: %d   LR Fi: %d   LR La: %d",ud_ratio_first,ud_ratio_last,lr_ratio_first,lr_ratio_last);
	HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);

#endif

	/* Determine the difference between the first and last ratios */
	ud_delta = ud_ratio_last - ud_ratio_first;
	lr_delta = lr_ratio_last - lr_ratio_first;

#if DEBUG
	sprintf((char*)msg,"\n Deltas -> UD: %d   LR: %d ",ud_delta,lr_delta);
	HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);
#endif

	/* Accumulate the UD and LR delta values */
	gesture_ud_delta_ += ud_delta;
	gesture_lr_delta_ += lr_delta;

#if DEBUG
	sprintf((char*)msg,"\n Accumulations -> UD: %d   LR: %d ",gesture_ud_delta_,gesture_lr_delta_);
	HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);
#endif

	/* Determine U/D gesture */
	if( gesture_ud_delta_ >= GESTURE_SENSITIVITY_1 )
	{
		gesture_ud_count_ = 1;
	}
	else if( gesture_ud_delta_ <= -GESTURE_SENSITIVITY_1 )
	{
		gesture_ud_count_ = -1;
	}
	else
	{
		gesture_ud_count_ = 0;
	}

	/* Determine L/R gesture */
	if( gesture_lr_delta_ >= GESTURE_SENSITIVITY_1 )
	{
		gesture_lr_count_ = 1;
	}
	else if( gesture_lr_delta_ <= -GESTURE_SENSITIVITY_1 )
	{
		gesture_lr_count_ = -1;
	}
	else
	{
		gesture_lr_count_ = 0;
	}

	/* Determine Near/Far gesture */
	if( (gesture_ud_count_ == 0) && (gesture_lr_count_ == 0) )
	{
		if( (abs(ud_delta) < GESTURE_SENSITIVITY_2) && \
				(abs(lr_delta) < GESTURE_SENSITIVITY_2) )
		{

			if( (ud_delta == 0) && (lr_delta == 0) )
			{
				gesture_near_count_++;
			}
			else if( (ud_delta != 0) || (lr_delta != 0) )
			{
				gesture_far_count_++;
			}

			if( (gesture_near_count_ >= 10) && (gesture_far_count_ >= 2) )
			{
				if( (ud_delta == 0) && (lr_delta == 0) )
				{
					gesture_state_ = NEAR_STATE;
				}
				else if( (ud_delta != 0) && (lr_delta != 0) )
				{
					gesture_state_ = FAR_STATE;
				}
				return true;
			}
		}
	} else {
		if( (abs(ud_delta) < GESTURE_SENSITIVITY_2) && \
				(abs(lr_delta) < GESTURE_SENSITIVITY_2) )
		{

			if( (ud_delta == 0) && (lr_delta == 0) )
			{
				gesture_near_count_++;
			}

			if( gesture_near_count_ >= 10 )
			{
				gesture_ud_count_ = 0;
				gesture_lr_count_ = 0;
				gesture_ud_delta_ = 0;
				gesture_lr_delta_ = 0;
			}
		}
	}

#if DEBUG
	sprintf((char*)msg,"\n UD_CT: %d   LR_CT: %d   NEAR_CT: %d   FAR_CT: %d ",
			 gesture_ud_count_,gesture_lr_count_,gesture_near_count_,gesture_far_count_);
	HAL_UART_Transmit(&huart2,(uint8_t*)msg,strlen(msg),HAL_MAX_DELAY);
#endif

	return false;
}

bool APDS9960::setLEDDrive(uint8_t drive)
{
	uint8_t val;

	/* Read value from CONTROL register */
	if( !APDS_9960_Read(APDS9960_CONTROL, val) )
	{
		return false;
	}

	/* Set bits in register to given value */
	drive &= 0b00000011;
	drive = drive << 6;
	val &= 0b00111111;
	val |= drive;

	/* Write register value back into CONTROL register */
	if( !APDS_9960_Write(APDS9960_CONTROL, val) )
	{
		return false;
	}

	return true;
}

bool APDS9960::setAmbientLightGain(uint8_t drive)
{
	uint8_t val;

	/* Read value from CONTROL register */
	if( !APDS_9960_Read(APDS9960_CONTROL, val) )
	{
		return false;
	}

	/* Set bits in register to given value */
	drive &= 0b00000011;
	val &= 0b11111100;
	val |= drive;

	/* Write register value back into CONTROL register */
	if( !APDS_9960_Write(APDS9960_CONTROL, val) )
	{
		return false;
	}

	return true;
}

bool APDS9960::setLEDBoost(uint8_t boost)
{
	uint8_t val;

	/* Read value from CONFIG2 register */
	if( !APDS_9960_Read(APDS9960_CONFIG2, val) )
	{
		return false;
	}

	/* Set bits in register to given value */
	boost &= 0b00000011;
	boost = boost << 4;
	val &= 0b11001111;
	val |= boost;

	/* Write register value back into CONFIG2 register */
	if( !APDS_9960_Write(APDS9960_CONFIG2, val) )
	{
		return false;
	}
	return true;
}

bool APDS9960::setProxGainCompEnable(uint8_t enable)
{
	uint8_t val;

	/* Read value from CONFIG3 register */
	if( !APDS_9960_Read(APDS9960_CONFIG3, val) )
	{
		return false;
	}

	/* Set bits in register to given value */
	enable &= 0b00000001;
	enable = enable << 5;
	val &= 0b11011111;
	val |= enable;

	/* Write register value back into CONFIG3 register */
	if( !APDS_9960_Write(APDS9960_CONFIG3, val) )
	{
		return false;
	}

	return true;
}

bool APDS9960::setProxPhotoMask(uint8_t mask)
{
	uint8_t val;

	/* Read value from CONFIG3 register */
	if( !APDS_9960_Read(APDS9960_CONFIG3, val) )
	{
		return false;
	}

	/* Set bits in register to given value */
	mask &= 0b00001111;
	val &= 0b11110000;
	val |= mask;

	/* Write register value back into CONFIG3 register */
	if( !APDS_9960_Write(APDS9960_CONFIG3, val) )
	{
		return false;
	}

	return true;
}

bool APDS9960::setGestureGain(uint8_t gain)
{
	uint8_t val;

	/* Read value from GCONF2 register */
	if( !APDS_9960_Read(APDS9960_GCONF2, val) )
	{
		return false;
	}

	/* Set bits in register to given value */
	gain &= 0b00000011;
	gain = gain << 5;
	val &= 0b10011111;
	val |= gain;

	/* Write register value back into GCONF2 register */
	if( !APDS_9960_Write(APDS9960_GCONF2, val) )
	{
		return false;
	}

	return true;
}

bool APDS9960::setGestureLEDDrive(uint8_t drive)
{
	uint8_t val;

	/* Read value from GCONF2 register */
	if( !APDS_9960_Read(APDS9960_GCONF2, val) )
	{
		return false;
	}

	/* Set bits in register to given value */
	drive &= 0b00000011;
	drive = drive << 3;
	val &= 0b11100111;
	val |= drive;

	/* Write register value back into GCONF2 register */
	if( !APDS_9960_Write(APDS9960_GCONF2, val) )
	{
		return false;
	}

	return true;
}

bool APDS9960::setGestureWaitTime(uint8_t time)
{
	uint8_t val;

	/* Read value from GCONF2 register */
	if( !APDS_9960_Read(APDS9960_GCONF2, val) )
	{
		return false;
	}

	/* Set bits in register to given value */
	time &= 0b00000111;
	val &= 0b11111000;
	val |= time;

	/* Write register value back into GCONF2 register */
	if( !APDS_9960_Write(APDS9960_GCONF2, val) )
	{
		return false;
	}

	return true;
}

bool APDS9960::setAmbientLightIntEnable(uint8_t enable)
{
	uint8_t val;

	/* Read value from ENABLE register */
	if( !APDS_9960_Read(APDS9960_ENABLE, val) )
	{
		return false;
	}

	/* Set bits in register to given value */
	enable &= 0b00000001;
	enable = enable << 4;
	val &= 0b11101111;
	val |= enable;

	/* Write register value back into ENABLE register */
	if( !APDS_9960_Write(APDS9960_ENABLE, val) )
	{
		return false;
	}

	return true;
}

bool APDS9960::setProximityIntEnable(uint8_t enable)
{
	uint8_t val;

	/* Read value from ENABLE register */
	if( !APDS_9960_Read(APDS9960_ENABLE, val) )
	{
		return false;
	}

	/* Set bits in register to given value */
	enable &= 0b00000001;
	enable = enable << 5;
	val &= 0b11011111;
	val |= enable;

	/* Write register value back into ENABLE register */
	if( !APDS_9960_Write(APDS9960_ENABLE, val) )
	{
		return false;
	}

	return true;
}

bool APDS9960::setGestureIntEnable(uint8_t enable)
{
	uint8_t val;

	/* Read value from GCONF4 register */
	if( !APDS_9960_Read(APDS9960_GCONF4, val) )
	{
		return false;
	}

	/* Set bits in register to given value */
	enable &= 0b00000001;
	enable = enable << 1;
	val &= 0b11111101;
	val |= enable;

	/* Write register value back into GCONF4 register */
	if( !APDS_9960_Write(APDS9960_GCONF4, val) )
	{
		return false;
	}

	return true;
}

bool APDS9960::setGestureMode(uint8_t mode)
{
	uint8_t val;

	/* Read value from GCONF4 register */
	if( !APDS_9960_Read(APDS9960_GCONF4, val) )
	{
		return false;
	}

	/* Set bits in register to given value */
	mode &= 0b00000001;
	val &= 0b11111110;
	val |= mode;

	/* Write register value back into GCONF4 register */
	if( !APDS_9960_Write(APDS9960_GCONF4, val) )
	{
		return false;
	}

	return true;
}
